Added new view controller to storyboard

--- a/RedditApp/RedditApp/Base.lproj/Main.storyboard
+++ b/RedditApp/RedditApp/Base.lproj/Main.storyboard
@@ -152,6 +152,8 @@
                                 <exclude reference="dRv-e3-Btk"/>
                                 <exclude reference="jjP-wf-LVB"/>
                                 <exclude reference="qcs-5D-COE"/>
+                                <exclude reference="C7w-lj-DPI"/>
+                                <exclude reference="ykb-zG-QxX"/>
                             </mask>
                         </variation>
                     </view>
@@ -162,10 +164,10 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="x5A-6p-PRh" sceneMemberID="firstResponder"/>
             </objects>
         </scene>
-        <!--View Controller-->
+        <!--Index View Controller-->
         <scene sceneID="w0A-sK-QAD">
             <objects>
-                <viewController id="1PS-dj-2pV" sceneMemberID="viewController">
+                <viewController id="1PS-dj-2pV" customClass="IndexViewController" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="sya-Ej-b2c"/>
                         <viewControllerLayoutGuide type="bottom" id="zlU-Ni-jvV"/>
@@ -173,12 +175,23 @@
                     <view key="view" contentMode="scaleToFill" id="Hj9-LC-IJD">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="J0q-dk-Axu">
+                                <rect key="frame" x="46" y="20" width="35" height="30"/>
+                                <state key="normal" title="Back">
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <segue destination="vXZ-lx-hvc" kind="show" id="PLm-w7-FDP"/>
+                                </connections>
+                            </button>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="L5O-Mi-Ro4" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1068" y="333"/>
+            <point key="canvasLocation" x="1438" y="138"/>
         </scene>
     </scenes>
 </document>
