Allign table in storyboard

--- a/RedditApp/RedditApp/Base.lproj/Main.storyboard
+++ b/RedditApp/RedditApp/Base.lproj/Main.storyboard
@@ -176,8 +176,15 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="J0q-dk-Axu">
-                                <rect key="frame" x="46" y="20" width="35" height="30"/>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="cz0-4P-tQ8">
+                                <rect key="frame" x="33" y="58" width="534" height="425"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="425" id="n9e-Xt-zrQ"/>
+                                </constraints>
+                            </tableView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="J0q-dk-Axu">
+                                <rect key="frame" x="33" y="20" width="35" height="30"/>
                                 <state key="normal" title="Back">
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
@@ -187,11 +194,39 @@
                             </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="J0q-dk-Axu" firstAttribute="top" secondItem="sya-Ej-b2c" secondAttribute="bottom" id="0a3-Go-0of"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="cz0-4P-tQ8" secondAttribute="trailing" constant="17" id="4GO-de-ZUm"/>
+                            <constraint firstItem="J0q-dk-Axu" firstAttribute="leading" secondItem="Hj9-LC-IJD" secondAttribute="leadingMargin" constant="30" id="5Zc-d0-PVY"/>
+                            <constraint firstAttribute="centerX" secondItem="J0q-dk-Axu" secondAttribute="centerX" id="Glz-mq-ixb"/>
+                            <constraint firstItem="J0q-dk-Axu" firstAttribute="leading" secondItem="Hj9-LC-IJD" secondAttribute="leadingMargin" constant="17" id="H2j-yC-tYc"/>
+                            <constraint firstItem="cz0-4P-tQ8" firstAttribute="leading" secondItem="J0q-dk-Axu" secondAttribute="leading" id="HBe-GY-IaX"/>
+                            <constraint firstAttribute="centerY" secondItem="J0q-dk-Axu" secondAttribute="centerY" id="NWG-Xp-LZv"/>
+                            <constraint firstItem="cz0-4P-tQ8" firstAttribute="top" secondItem="J0q-dk-Axu" secondAttribute="bottom" constant="29" id="ZdO-f2-rga"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="cz0-4P-tQ8" secondAttribute="trailing" constant="5" id="cAv-kE-doI"/>
+                            <constraint firstItem="J0q-dk-Axu" firstAttribute="top" secondItem="sya-Ej-b2c" secondAttribute="bottom" id="ckk-4z-EcG"/>
+                            <constraint firstAttribute="centerX" secondItem="cz0-4P-tQ8" secondAttribute="centerX" id="fOq-lx-VZ9"/>
+                            <constraint firstItem="cz0-4P-tQ8" firstAttribute="leading" secondItem="Hj9-LC-IJD" secondAttribute="leadingMargin" constant="5" id="goS-R3-ArM"/>
+                            <constraint firstItem="cz0-4P-tQ8" firstAttribute="leading" secondItem="Hj9-LC-IJD" secondAttribute="leadingMargin" constant="17" id="gy8-Zw-0y9"/>
+                            <constraint firstItem="cz0-4P-tQ8" firstAttribute="top" secondItem="J0q-dk-Axu" secondAttribute="bottom" constant="8" id="xH7-Cj-eBh"/>
+                        </constraints>
+                        <variation key="default">
+                            <mask key="constraints">
+                                <exclude reference="0a3-Go-0of"/>
+                                <exclude reference="5Zc-d0-PVY"/>
+                                <exclude reference="Glz-mq-ixb"/>
+                                <exclude reference="NWG-Xp-LZv"/>
+                                <exclude reference="ZdO-f2-rga"/>
+                                <exclude reference="cAv-kE-doI"/>
+                                <exclude reference="fOq-lx-VZ9"/>
+                                <exclude reference="goS-R3-ArM"/>
+                            </mask>
+                        </variation>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="L5O-Mi-Ro4" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1238" y="932"/>
+            <point key="canvasLocation" x="1336" y="267"/>
         </scene>
     </scenes>
 </document>
