--- a/RedditApp/RedditApp/Base.lproj/Main.storyboard
+++ b/RedditApp/RedditApp/Base.lproj/Main.storyboard
@@ -176,13 +176,6 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="cz0-4P-tQ8">
-                                <rect key="frame" x="33" y="58" width="534" height="425"/>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="425" id="n9e-Xt-zrQ"/>
-                                </constraints>
-                            </tableView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="J0q-dk-Axu">
                                 <rect key="frame" x="33" y="20" width="35" height="30"/>
                                 <state key="normal" title="Back">
@@ -192,23 +185,37 @@
                                     <segue destination="vXZ-lx-hvc" kind="show" id="PLm-w7-FDP"/>
                                 </connections>
                             </button>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" misplaced="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="Mb5-nd-dB5">
+                                <rect key="frame" x="16" y="58" width="568" height="522"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <prototypes>
+                                    <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="JRu-Ea-au3">
+                                        <rect key="frame" x="0.0" y="0.0" width="300" height="44"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" restorationIdentifier="Cell" tableViewCell="JRu-Ea-au3" id="aox-hX-EmW">
+                                            <autoresizingMask key="autoresizingMask"/>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </prototypes>
+                                <connections>
+                                    <outlet property="dataSource" destination="1PS-dj-2pV" id="aW2-cB-evp"/>
+                                    <outlet property="delegate" destination="1PS-dj-2pV" id="VIH-pe-56o"/>
+                                </connections>
+                            </tableView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstItem="J0q-dk-Axu" firstAttribute="top" secondItem="sya-Ej-b2c" secondAttribute="bottom" id="0a3-Go-0of"/>
-                            <constraint firstAttribute="trailingMargin" secondItem="cz0-4P-tQ8" secondAttribute="trailing" constant="17" id="4GO-de-ZUm"/>
                             <constraint firstItem="J0q-dk-Axu" firstAttribute="leading" secondItem="Hj9-LC-IJD" secondAttribute="leadingMargin" constant="30" id="5Zc-d0-PVY"/>
                             <constraint firstAttribute="centerX" secondItem="J0q-dk-Axu" secondAttribute="centerX" id="Glz-mq-ixb"/>
                             <constraint firstItem="J0q-dk-Axu" firstAttribute="leading" secondItem="Hj9-LC-IJD" secondAttribute="leadingMargin" constant="17" id="H2j-yC-tYc"/>
-                            <constraint firstItem="cz0-4P-tQ8" firstAttribute="leading" secondItem="J0q-dk-Axu" secondAttribute="leading" id="HBe-GY-IaX"/>
+                            <constraint firstItem="Mb5-nd-dB5" firstAttribute="top" secondItem="sya-Ej-b2c" secondAttribute="bottom" constant="20" id="JE4-a4-fSu"/>
+                            <constraint firstItem="Mb5-nd-dB5" firstAttribute="leading" secondItem="Hj9-LC-IJD" secondAttribute="leading" constant="15" id="NOI-Je-S1J"/>
                             <constraint firstAttribute="centerY" secondItem="J0q-dk-Axu" secondAttribute="centerY" id="NWG-Xp-LZv"/>
-                            <constraint firstItem="cz0-4P-tQ8" firstAttribute="top" secondItem="J0q-dk-Axu" secondAttribute="bottom" constant="29" id="ZdO-f2-rga"/>
-                            <constraint firstAttribute="trailingMargin" secondItem="cz0-4P-tQ8" secondAttribute="trailing" constant="5" id="cAv-kE-doI"/>
                             <constraint firstItem="J0q-dk-Axu" firstAttribute="top" secondItem="sya-Ej-b2c" secondAttribute="bottom" id="ckk-4z-EcG"/>
-                            <constraint firstAttribute="centerX" secondItem="cz0-4P-tQ8" secondAttribute="centerX" id="fOq-lx-VZ9"/>
-                            <constraint firstItem="cz0-4P-tQ8" firstAttribute="leading" secondItem="Hj9-LC-IJD" secondAttribute="leadingMargin" constant="5" id="goS-R3-ArM"/>
-                            <constraint firstItem="cz0-4P-tQ8" firstAttribute="leading" secondItem="Hj9-LC-IJD" secondAttribute="leadingMargin" constant="17" id="gy8-Zw-0y9"/>
-                            <constraint firstItem="cz0-4P-tQ8" firstAttribute="top" secondItem="J0q-dk-Axu" secondAttribute="bottom" constant="8" id="xH7-Cj-eBh"/>
+                            <constraint firstItem="Mb5-nd-dB5" firstAttribute="top" secondItem="J0q-dk-Axu" secondAttribute="bottom" constant="8" id="hje-kh-XnV"/>
+                            <constraint firstItem="zlU-Ni-jvV" firstAttribute="top" secondItem="Mb5-nd-dB5" secondAttribute="bottom" constant="20" id="lLE-Qn-s13"/>
+                            <constraint firstAttribute="trailing" secondItem="Mb5-nd-dB5" secondAttribute="trailing" constant="15" id="pBE-K5-VJu"/>
                         </constraints>
                         <variation key="default">
                             <mask key="constraints">
@@ -216,10 +223,7 @@
                                 <exclude reference="5Zc-d0-PVY"/>
                                 <exclude reference="Glz-mq-ixb"/>
                                 <exclude reference="NWG-Xp-LZv"/>
-                                <exclude reference="ZdO-f2-rga"/>
-                                <exclude reference="cAv-kE-doI"/>
-                                <exclude reference="fOq-lx-VZ9"/>
-                                <exclude reference="goS-R3-ArM"/>
+                                <exclude reference="JE4-a4-fSu"/>
                             </mask>
                         </variation>
                     </view>
