--- a/RedditApp/RedditApp/Base.lproj/Main.storyboard
+++ b/RedditApp/RedditApp/Base.lproj/Main.storyboard
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7706" systemVersion="14F27" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="1wO-tm-Lpu">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9059" systemVersion="15B42" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="1wO-tm-Lpu">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7703"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9049"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
@@ -12,6 +13,7 @@
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="WOg-wh-5vu">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
+                        <animations/>
                     </navigationBar>
                     <connections>
                         <segue destination="1PS-dj-2pV" kind="relationship" relationship="rootViewController" id="bZh-br-bur"/>
@@ -34,15 +36,19 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="Mb5-nd-dB5">
-                                <rect key="frame" x="15" y="0.0" width="570" height="600"/>
+                                <rect key="frame" x="20" y="0.0" width="560" height="600"/>
+                                <animations/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
                                     <tableViewCell contentMode="scaleToFill" selectionStyle="default" accessoryType="disclosureIndicator" indentationWidth="10" reuseIdentifier="Cell" id="JRu-Ea-au3">
-                                        <rect key="frame" x="0.0" y="0.0" width="300" height="44"/>
+                                        <rect key="frame" x="0.0" y="86" width="560" height="44"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" restorationIdentifier="Cell" tableViewCell="JRu-Ea-au3" id="aox-hX-EmW">
+                                            <rect key="frame" x="0.0" y="0.0" width="527" height="43"/>
                                             <autoresizingMask key="autoresizingMask"/>
+                                            <animations/>
                                         </tableViewCellContentView>
+                                        <animations/>
                                         <connections>
                                             <segue destination="MCP-7b-gee" kind="show" id="QJB-mO-Uma"/>
                                         </connections>
@@ -54,6 +60,7 @@
                                 </connections>
                             </tableView>
                         </subviews>
+                        <animations/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstItem="zlU-Ni-jvV" firstAttribute="top" secondItem="Mb5-nd-dB5" secondAttribute="bottom" id="1fv-6x-PkY"/>
@@ -67,6 +74,8 @@
                             <constraint firstAttribute="centerX" secondItem="Mb5-nd-dB5" secondAttribute="centerX" id="p70-G5-Td5"/>
                             <constraint firstAttribute="trailing" secondItem="Mb5-nd-dB5" secondAttribute="trailing" constant="15" id="pBE-K5-VJu"/>
                             <constraint firstItem="Mb5-nd-dB5" firstAttribute="top" secondItem="Hj9-LC-IJD" secondAttribute="topMargin" id="pkf-nC-NeS"/>
+                            <constraint firstItem="Mb5-nd-dB5" firstAttribute="leading" secondItem="Hj9-LC-IJD" secondAttribute="leadingMargin" id="pzh-mX-NLI"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="Mb5-nd-dB5" secondAttribute="trailing" id="tNy-Nd-Njw"/>
                             <constraint firstItem="zlU-Ni-jvV" firstAttribute="top" secondItem="Mb5-nd-dB5" secondAttribute="bottom" constant="20" id="ye2-YN-eOG"/>
                         </constraints>
                         <variation key="default">
@@ -74,7 +83,9 @@
                                 <exclude reference="JE4-a4-fSu"/>
                                 <exclude reference="L1U-5S-DTh"/>
                                 <exclude reference="NOI-Je-S1J"/>
+                                <exclude reference="Sy3-yt-VfX"/>
                                 <exclude reference="eZR-w5-caA"/>
+                                <exclude reference="hOL-mR-iLL"/>
                                 <exclude reference="p70-G5-Td5"/>
                                 <exclude reference="pBE-K5-VJu"/>
                                 <exclude reference="lLE-Qn-s13"/>
@@ -105,19 +116,32 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5Xq-eT-eU1">
-                                <rect key="frame" x="159" y="263" width="42" height="41"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
-                                <nil key="highlightedColor"/>
-                            </label>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="DRk-QR-MJa">
+                                <rect key="frame" x="10" y="-27" width="570" height="600"/>
+                                <animations/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <prototypes>
+                                    <tableViewCell contentMode="scaleToFill" selectionStyle="default" accessoryType="disclosureIndicator" indentationWidth="10" reuseIdentifier="Cell" id="NPa-2N-1m2">
+                                        <rect key="frame" x="0.0" y="86" width="570" height="44"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" restorationIdentifier="Cell" tableViewCell="NPa-2N-1m2" id="p4x-eF-eS9">
+                                            <rect key="frame" x="0.0" y="0.0" width="537" height="43"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <animations/>
+                                        </tableViewCellContentView>
+                                        <animations/>
+                                    </tableViewCell>
+                                </prototypes>
+                                <connections>
+                                    <outlet property="dataSource" destination="1PS-dj-2pV" id="Qyu-G0-bWm"/>
+                                    <outlet property="delegate" destination="1PS-dj-2pV" id="7l4-5q-lhQ"/>
+                                </connections>
+                            </tableView>
                         </subviews>
+                        <animations/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
                     <navigationItem key="navigationItem" id="h4V-us-0Df"/>
-                    <connections>
-                        <outlet property="mainLabel" destination="5Xq-eT-eU1" id="1sQ-3F-rUl"/>
-                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="AEX-nJ-ZqU" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
